--- a/views/partials/admin/side bar.ejs
+++ b/views/partials/admin/side bar.ejs
@@ -1,4 +1,4 @@
-<div class="bg-white w-64 p-4 flex flex-col">
+<div class="bg-white w-64 h-screen p-4 flex flex-col">
     <div class="flex items-center justify-between mb-6">
         <span class="text-2xl font-bold text-orange-500">
             <img class="w-[120px] h-auto" src="/images/Craftora_logo.png" alt="Brand Logo">
