--- a/views/partials/admin/side bar.ejs
+++ b/views/partials/admin/side bar.ejs
@@ -49,9 +49,13 @@
             <i class="fas fa-cog mr-3"></i>
             Settings
         </a>
-        <a class="flex items-center text-gray-600 hover:bg-gray-200 rounded-md" href="#">
+        <a class="flex items-center text-gray-600 mb-4 hover:bg-gray-200 rounded-md" href="#">
             <i class="fas fa-headset mr-3"></i>
             Support
+        </a>
+        <a class="flex items-center text-gray-600 mb-4 hover:bg-gray-200 rounded-md" href="/admin/logout">
+            <i class="fas fa-sign-out-alt mr-3"></i>
+            Logout
         </a>
     </div>
 </div>
