--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -19,6 +19,9 @@
             <a class="hover:underline" href="#">
                 About
             </a>
+            <a class="flex items-center text-gray-600 hover:bg-gray-200 rounded-md" href="/user/logout">
+                <i class="fas fa-sign-out-alt mr-3"></i>Log out
+            </a>
             <% if (!greetName){%>
                 <a class="hover:underline" href="#">
                     Sign Up
